# scholarflow

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
cli/: main.py
docker/: Dockerfile  docker-compose.yml  nginx.conf
docs/: server-deploy-guide.md
docs/beginner-guide/: 01-环境准备.md  02-本地安装使用.md  03-服务器部署.md  04-OpenClaw安装.md  05-桌面应用使用.md
examples/attention_is_all_you_need/: beamer.tex  mindmap.html  notes_deep.tex  notes_grandma.tex  poster.html  script.tex  slides.pptx  summary.md  translate.md
mcp/: server.py
scholarflow/: __init__.py  config.py  models.py  pipeline.py
scholarflow/analyzer/: llm_client.py  paper_analyzer.py
scholarflow/fetcher/: paper_fetcher.py
scholarflow/generator/: beamer_gen.py  latex_compiler.py  md2latex.py  mindmap_gen.py  notes_gen.py  poster_gen.py  pptx_gen.py  script_gen.py  summary_gen.py  translate_gen.py
scholarflow/parser/: pdf_parser.py
scholarflow/prompts/: mindmap.j2  notes_deep.j2  notes_exam.j2  notes_grandma.j2  notes_quick.j2  poster.j2  script.j2  slides_content.j2  summary.j2  translate.j2
scholarflow/templates/beamer/: base.tex.j2
scholarflow/templates/mindmap/: markmap.html.j2
scholarflow/templates/notes/: base.tex.j2
scholarflow/templates/poster/: a0_landscape.html.j2
scholarflow/templates/script/: base.tex.j2
skill/: SKILL.md
web/backend/: main.py
